test/fail/move_self.rs
#[objective::objective]
trait Test {
    fn test(self);
}

fn main() {}
