test/fail/move_self.stderr
error: All trait methods must accept &self or &mut self
 --> test/fail/move_self.rs:3:13
  |
3 |     fn test(self);
  |             ^^^^
